# embedded-sensors

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: check.yml  nostd.yml
embedded-sensors/: Cargo.toml  README.md
embedded-sensors-async/: Cargo.toml  README.md
embedded-sensors-async/src/: humidity.rs  lib.rs  sensor.rs  temperature.rs
embedded-sensors/src/: humidity.rs  lib.rs  sensor.rs  temperature.rs
