[package]
authors = ["Kurtis Dinelle <t-kudinelle@microsoft.com>"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "sensors"]
license = "MIT"
name = "embedded-sensors-async"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-sensors"
version = "0.1.0"

[features]
defmt = ["dep:defmt", "embedded-sensors/defmt"]

[dependencies]
embedded-sensors = { path = "../embedded-sensors" }
defmt = { package = "defmt", version = "0.3.7", optional = true }
paste = "1.0.15"
