[package]
authors = ["Kurtis Dinelle <kdinelle@microsoft.com>"]
categories = ["embedded", "no-std", "hardware-support"]
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "sensors"]
license = "MIT"
name = "embedded-sensors-hal-async"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-sensors"
version = "0.1.0"

[features]
defmt = ["dep:defmt", "embedded-sensors-hal/defmt"]

[dependencies]
embedded-sensors-hal = { path = "../embedded-sensors" }
defmt = { package = "defmt", version = "1.0.0", optional = true }
paste = "1.0.15"
