[package]
authors = ["Kurtis Dinelle <kdinelle@microsoft.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "A HAL for various peripheral sensors"
edition = "2021"
rust-version = "1.79"
keywords = ["hal", "sensors"]
license = "MIT"
name = "embedded-sensors-hal"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-sensors"
version = "0.1.0"

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { package = "defmt", version = "1.0.0", optional = true }
